src/main/java/czlab/tecs/p11/ASTGentor.java
/* ASTGentor.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. ASTGentor.java */
package czlab.tecs.p11;

import java.util.ArrayList;
import java.util.List;

public class ASTGentor/*@bgen(jjtree)*/implements ASTGentorTreeConstants, ASTGentorConstants {/*@bgen(jjtree)*/
  protected static JJTASTGentorState jjtree = new JJTASTGentorState();
  public static SimpleNode parseOneUnit()
  throws Exception {
    return parseClazz();
  }

/************************************************
 * THE Jack GRAMMAR SPECIFICATION STARTS HERE *
 ************************************************/
//kenl
  static final public ClassDec parseClazz() throws ParseException {/*@bgen(jjtree) ClassDec */
 ClassDec jjtn000 = new ClassDec(JJTCLASSDEC);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token z;
    try {
      jj_consume_token(CLASS);
      z = className();
      jj_consume_token(LCURLY);
      label_1:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_1;
        }
        classVarDec();
      }
      label_2:
      while (true) {
        if (jj_2_2(2)) {
          ;
        } else {
          break label_2;
        }
        subroutineDec();
      }
      jj_consume_token(RCURLY);
jjtree.closeNodeScope(jjtn000, true);
             jjtc000 = false;
jjtn000.props.put("name", z.image);
    {if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

//////////////////////////////////////////////////////////////////////////////
//
  static final public void classVarDec() throws ParseException {/*@bgen(jjtree) ClassVarDec */
 ClassVarDec jjtn000 = new ClassVarDec(JJTCLASSVARDEC);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);List<String> vs= new ArrayList<String>();
 Token v, t;
 String q="";
    try {
      if (jj_2_5(2)) {
        if (jj_2_3(2)) {
          jj_consume_token(STATIK);
q=token.image;
        } else if (jj_2_4(2)) {
          jj_consume_token(FIELD);
q=token.image;
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else {
        ;
      }
      t = type();
      v = varName();
vs.add(v.image);
      label_3:
      while (true) {
        if (jj_2_6(2)) {
          ;
        } else {
          break label_3;
        }
        jj_consume_token(COMMA);
        v = varName();
vs.add(v.image);
      }
      jj_consume_token(SEMICOLON);
jjtree.closeNodeScope(jjtn000, true);
                                       jjtc000 = false;
jjtn000.props.put("qualifier", q);
    jjtn000.props.put("type", t.image);
    jjtn000.props.put("vars", vs);
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  static final public Token type() throws ParseException {
    if (jj_2_7(2)) {
      jj_consume_token(INT);
{if ("" != null) return token;}
    } else if (jj_2_8(2)) {
      jj_consume_token(CHAR);
{if ("" != null) return token;}
    } else if (jj_2_9(2)) {
      jj_consume_token(BOOLEAN);
{if ("" != null) return token;}
    } else if (jj_2_10(2)) {
      jj_consume_token(IDENTIFIER);
{if ("" != null) return token;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  static final public void subroutineDec() throws ParseException {/*@bgen(jjtree) SubroutineDec */
 SubroutineDec jjtn000 = new SubroutineDec(JJTSUBROUTINEDEC);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);String r="", q="";
 Object vs=null;
 Object pml=null;
 Token sn,t;
    try {
      if (jj_2_14(2)) {
        if (jj_2_11(2)) {
          jj_consume_token(CONSTRUCTOR);
q=token.image;
        } else if (jj_2_12(2)) {
          jj_consume_token(FUNCTION);
q=token.image;
        } else if (jj_2_13(2)) {
          jj_consume_token(METHOD);
q=token.image;
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else {
        ;
      }
      if (jj_2_17(2)) {
        if (jj_2_15(2)) {
          jj_consume_token(VOID);
r=token.image;
        } else if (jj_2_16(2)) {
          t = type();
r=t.image;
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else {
        ;
      }
      sn = subroutineName();
      jj_consume_token(LPAREN);
      pml = parameterList();
      jj_consume_token(RPAREN);
      jj_consume_token(LCURLY);
      label_4:
      while (true) {
        if (jj_2_18(2)) {
          ;
        } else {
          break label_4;
        }
        vs = varDec();
      }
      statements();
      jj_consume_token(RCURLY);
jjtree.closeNodeScope(jjtn000, true);
                                                  jjtc000 = false;
jjtn000.props.put("qualifier", q);
    jjtn000.props.put("type", r);
    jjtn000.props.put("name", sn);
    if (pml != null) {
      jjtn000.props.put("args", pml);
    }
    if (vs != null) {
      jjtn000.props.put("vars", vs);
    }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  static final public Object parameterList() throws ParseException {List<String> ps= new ArrayList<String>();
 Token vn, t;
    if (jj_2_20(2)) {
      t = type();
      vn = varName();
ps.add(t.image); ps.add(vn.image);
      label_5:
      while (true) {
        if (jj_2_19(2)) {
          ;
        } else {
          break label_5;
        }
        jj_consume_token(COMMA);
        t = type();
        vn = varName();
ps.add(t.image); ps.add(vn.image);
      }
    } else {
      ;
    }
{if ("" != null) return ps;}
    throw new Error("Missing return statement in function");
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  static final public Object varDec() throws ParseException {List<String> ps=new ArrayList<String>();
Token vn, t;
    jj_consume_token(VAR);
    t = type();
    vn = varName();
ps.add(t.image); ps.add(vn.image);
    label_6:
    while (true) {
      if (jj_2_21(2)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(COMMA);
      vn = varName();
ps.add(t.image); ps.add(vn.image);
    }
    jj_consume_token(SEMICOLON);
{if ("" != null) return ps;}
    throw new Error("Missing return statement in function");
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  static final public void statements() throws ParseException {/*@bgen(jjtree) Statements */
  Statements jjtn000 = new Statements(JJTSTATEMENTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_7:
      while (true) {
        if (jj_2_22(2)) {
          ;
        } else {
          break label_7;
        }
        statement();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  static final public void statement() throws ParseException {
    if (jj_2_23(2)) {
      letStatement();
    } else if (jj_2_24(2)) {
      ifStatement();
    } else if (jj_2_25(2)) {
      whileStatement();
    } else if (jj_2_26(2)) {
      doStatement();
    } else if (jj_2_27(2)) {
      returnStatement();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  static final public void letStatement() throws ParseException {/*@bgen(jjtree) LetStatement */
 LetStatement jjtn000 = new LetStatement(JJTLETSTATEMENT);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token vn;
    try {
      jj_consume_token(LET);
      vn = varName();
      if (jj_2_28(2)) {
        jj_consume_token(LBRAC);
        expr();
        jj_consume_token(RBRAC);
      } else {
        ;
      }
      jj_consume_token(EQ);
      expr();
      jj_consume_token(SEMICOLON);
jjtree.closeNodeScope(jjtn000, true);
                            jjtc000 = false;
jjtn000.props.put("var", vn.image);
    int cnt= jjtn000.jjtGetNumChildren();
    if (cnt == 2) {
      jjtn000.nested.put("lhs", jjtn000.jjtGetChild(0));
      jjtn000.nested.put("rhs", jjtn000.jjtGetChild(1));
    } else {
      jjtn000.nested.put("rhs", jjtn000.jjtGetChild(0));
    }
    jjtn000.removeChildren();
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  static final public void ifStatement() throws ParseException {/*@bgen(jjtree) IfStatement */
  IfStatement jjtn000 = new IfStatement(JJTIFSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      expr();
      jj_consume_token(RPAREN);
      jj_consume_token(LCURLY);
      statements();
IfBlock jjtn001 = new IfBlock(JJTIFBLOCK);
                          boolean jjtc001 = true;
                          jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(RCURLY);
      } finally {
if (jjtc001) {
                            jjtree.closeNodeScope(jjtn001,  1);
                          }
      }
      if (jj_2_29(2)) {
        jj_consume_token(ELSE);
        jj_consume_token(LCURLY);
        statements();
ElseBlock jjtn002 = new ElseBlock(JJTELSEBLOCK);
                                  boolean jjtc002 = true;
                                  jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(RCURLY);
        } finally {
if (jjtc002) {
                                    jjtree.closeNodeScope(jjtn002,  1);
                                  }
        }
      } else {
        ;
      }
jjtree.closeNodeScope(jjtn000, true);
                                                           jjtc000 = false;
jjtn000.nested.put("test", jjtn000.popChild());
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  static final public void whileStatement() throws ParseException {/*@bgen(jjtree) WhileStatement */
  WhileStatement jjtn000 = new WhileStatement(JJTWHILESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      expr();
      jj_consume_token(RPAREN);
      jj_consume_token(LCURLY);
      statements();
WhileBlock jjtn001 = new WhileBlock(JJTWHILEBLOCK);
                            boolean jjtc001 = true;
                            jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(RCURLY);
      } finally {
if (jjtc001) {
                              jjtree.closeNodeScope(jjtn001,  1);
                            }
      }
jjtree.closeNodeScope(jjtn000, true);
                                                    jjtc000 = false;
jjtn000.nested.put("test", jjtn000.popChild());
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  static final public void doStatement() throws ParseException {/*@bgen(jjtree) DoStatement */
  DoStatement jjtn000 = new DoStatement(JJTDOSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(DO);
      subroutineCall();
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  static final public void returnStatement() throws ParseException {/*@bgen(jjtree) ReturnStatement */
  ReturnStatement jjtn000 = new ReturnStatement(JJTRETURNSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_30(2)) {
        jj_consume_token(RETURN);
        jj_consume_token(SEMICOLON);
      } else if (jj_2_31(2)) {
        jj_consume_token(RETURN);
        expr();
        jj_consume_token(SEMICOLON);
jjtree.closeNodeScope(jjtn000, true);
                                jjtc000 = false;
jjtn000.nested.put("value", jjtn000.popChild());
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  static final public void expr() throws ParseException {/*@bgen(jjtree) Expression */
  Expression jjtn000 = new Expression(JJTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      term();
      label_8:
      while (true) {
        if (jj_2_32(2)) {
          ;
        } else {
          break label_8;
        }
        op();
        term();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

//;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
//
  static final public void term() throws ParseException {/*@bgen(jjtree) Term */
 Term jjtn000 = new Term(JJTTERM);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Object e=null;
 Token vn;
    try {
      if (jj_2_33(2)) {
        jj_consume_token(LPAREN);
        expr();
        jj_consume_token(RPAREN);
jjtree.closeNodeScope(jjtn000, true);
                             jjtc000 = false;
